@@ -20,12 +20,18 @@
  */
 package org.candlepin.subscriptions.db;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import com.redhat.swatch.configuration.registry.MetricId;
+import com.redhat.swatch.configuration.util.MetricIdUtils;
 import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -34,43 +40,51 @@ import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import org.candlepin.clock.ApplicationClock;
+import org.candlepin.subscriptions.db.model.AccountServiceInventory;
+import org.candlepin.subscriptions.db.model.AccountServiceInventoryId;
+import org.candlepin.subscriptions.db.model.BillingProvider;
 import org.candlepin.subscriptions.db.model.HardwareMeasurementType;
 import org.candlepin.subscriptions.db.model.Host;
+import org.candlepin.subscriptions.db.model.HostApiProjection;
 import org.candlepin.subscriptions.db.model.HostHardwareType;
 import org.candlepin.subscriptions.db.model.HostTallyBucket;
 import org.candlepin.subscriptions.db.model.ServiceLevel;
 import org.candlepin.subscriptions.db.model.TallyHostView;
 import org.candlepin.subscriptions.db.model.Usage;
-import org.candlepin.subscriptions.json.Measurement;
-import org.candlepin.subscriptions.resource.HostsResource;
-import org.candlepin.subscriptions.utilization.api.model.HostReportSort;
+import org.candlepin.subscriptions.test.TestClockConfiguration;
+import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.TestInstance.Lifecycle;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
-import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.annotation.Import;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
 @SpringBootTest
 @ActiveProfiles("test")
 @TestInstance(Lifecycle.PER_CLASS)
+@Import(TestClockConfiguration.class)
 class HostRepositoryTest {
-
-  private final String RHEL = "RHEL";
-  private final String COOL_PROD = "COOL_PROD";
+  private static final String RHEL = "RHEL";
+  private static final String COOL_PROD = "COOL_PROD";
   private static final String DEFAULT_DISPLAY_NAME = "REDHAT_PWNS";
   private static final String SANITIZED_MISSING_DISPLAY_NAME = "";
+  private static final String SORT_BY_MONTHLY_TOTALS = "monthlyTotals";
 
   @Autowired private HostRepository repo;
+  @Autowired private ApplicationClock clock;
+  @Autowired private AccountServiceInventoryRepository accountServiceInventoryRepository;
 
   private Map<String, Host> existingHostsByInventoryId;
 
@@ -106,41 +120,63 @@ class HostRepositoryTest {
     Host host9 = createHost("inventory9", "account123");
     Host host10 = createHost("inventory10", "account123");
 
-    host8.addToMonthlyTotal(
-        OffsetDateTime.of(LocalDateTime.of(2021, 1, 1, 0, 0, 0), ZoneOffset.UTC),
-        Measurement.Uom.CORES,
-        100.0);
-    host9.addToMonthlyTotal(
-        OffsetDateTime.of(LocalDateTime.of(2021, 1, 1, 0, 0, 0), ZoneOffset.UTC),
-        Measurement.Uom.CORES,
-        0.0);
-    host10.addToMonthlyTotal(
-        OffsetDateTime.of(LocalDateTime.of(2021, 2, 1, 0, 0, 0), ZoneOffset.UTC),
-        Measurement.Uom.CORES,
-        50.0);
+    for (MetricId uom : MetricId.getAll()) {
+      host8.addToMonthlyTotal(
+          OffsetDateTime.of(LocalDateTime.of(2021, 1, 1, 0, 0, 0), ZoneOffset.UTC), uom, 100.0);
+      host9.addToMonthlyTotal(
+          OffsetDateTime.of(LocalDateTime.of(2021, 1, 1, 0, 0, 0), ZoneOffset.UTC), uom, 0.0);
+      host10.addToMonthlyTotal(
+          OffsetDateTime.of(LocalDateTime.of(2021, 2, 1, 0, 0, 0), ZoneOffset.UTC), uom, 50.0);
+    }
 
     addBucketToHost(host8, RHEL, ServiceLevel._ANY, Usage._ANY, HardwareMeasurementType.PHYSICAL);
     addBucketToHost(host9, RHEL, ServiceLevel._ANY, Usage._ANY, HardwareMeasurementType.PHYSICAL);
     addBucketToHost(host10, RHEL, ServiceLevel._ANY, Usage._ANY, HardwareMeasurementType.PHYSICAL);
 
-    persistHosts(host1, host2, host3, host4, host5, host6, host7, host8, host9, host10);
+    existingHostsByInventoryId =
+        persistHosts(host1, host2, host3, host4, host5, host6, host7, host8, host9, host10).stream()
+            .collect(Collectors.toMap(Host::getInventoryId, Function.identity()));
   }
 
-  private void persistHosts(Host... hosts) {
+  @Transactional
+  @AfterAll
+  void cleanup() {
+    accountServiceInventoryRepository.deleteAll();
+  }
+
+  @Transactional(propagation = Propagation.REQUIRES_NEW)
+  List<Host> persistHosts(Host... hosts) {
     List<Host> toSave = Arrays.asList(hosts);
-    toSave.forEach(x -> x.setDisplayName(DEFAULT_DISPLAY_NAME));
-    existingHostsByInventoryId =
-        repo.saveAll(toSave).stream().collect(Collectors.toMap(Host::getInventoryId, host -> host));
-    repo.flush();
+    toSave.stream()
+        .filter(h -> h.getDisplayName() == null)
+        .forEach(x -> x.setDisplayName(DEFAULT_DISPLAY_NAME));
+    List<Host> results = new ArrayList<>();
+    Arrays.stream(hosts)
+        .forEach(
+            host -> {
+              AccountServiceInventory accountServiceInventory =
+                  accountServiceInventoryRepository
+                      .findById(
+                          AccountServiceInventoryId.builder()
+                              .orgId(host.getOrgId())
+                              .serviceType("HBI_HOST")
+                              .build())
+                      .orElse(new AccountServiceInventory(host.getOrgId(), "HBI_HOST"));
+              accountServiceInventory.getServiceInstances().put(host.getInstanceId(), host);
+              accountServiceInventory =
+                  accountServiceInventoryRepository.save(accountServiceInventory);
+              results.add(accountServiceInventory.getServiceInstances().get(host.getInstanceId()));
+            });
+    accountServiceInventoryRepository.flush();
+    return results;
   }
 
   @Test
   void testTallyHostViewProjection() {
     // Ensure that the TallyHostView is properly projecting values.
-    OffsetDateTime expLastSeen = OffsetDateTime.now();
+    OffsetDateTime expLastSeen = OffsetDateTime.now(clock.getClock());
     String expInventoryId = "INV";
     String expInsightsId = "INSIGHTS_ID";
-    String expAccount = "ACCT";
     String expOrg = "ORG";
     String expSubId = "SUB_ID";
     String expDisplayName = "HOST_DISPLAY";
@@ -153,12 +189,14 @@ class HostRepositoryTest {
     boolean expIsHypervisor = true;
     String expCloudProvider = "CLOUD_PROVIDER";
 
-    Host host = new Host(expInventoryId, expInsightsId, expAccount, expOrg, expSubId);
+    Host host = new Host(expInventoryId, expInsightsId, expOrg, expSubId);
+    host.setBillingProvider(BillingProvider.RED_HAT);
+    host.setBillingAccountId("_ANY");
     host.setNumOfGuests(expGuests);
     host.setDisplayName(expDisplayName);
     host.setLastSeen(expLastSeen);
-    host.setCores(12);
-    host.setSockets(12);
+    host.setMeasurement(MetricIdUtils.getCores().toString(), 12.0);
+    host.setMeasurement(MetricIdUtils.getSockets().toString(), 12.0);
     host.setHypervisor(expIsHypervisor);
     host.setUnmappedGuest(expUnmappedGuest);
     host.setCloudProvider(expCloudProvider);
@@ -168,19 +206,23 @@ class HostRepositoryTest {
         RHEL,
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         false,
         expSockets,
         expCores,
         expMeasurementType);
 
-    repo.saveAndFlush(host);
+    persistHosts(host);
 
     Page<TallyHostView> hosts =
         repo.getTallyHostViews(
-            expAccount,
+            expOrg,
             RHEL,
             ServiceLevel.PREMIUM,
             Usage.PRODUCTION,
+            BillingProvider.RED_HAT,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             0,
             0,
@@ -209,46 +251,50 @@ class HostRepositoryTest {
   @Transactional
   @Test
   void testCreate() {
-    Host host = new Host("INV1", "HOST1", "my_acct", "my_org", "sub_id");
+    Host host = new Host("INV1", "HOST1", "my_org", "sub_id");
     host.setDisplayName(DEFAULT_DISPLAY_NAME);
     host.addBucket(
         "RHEL",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         false,
         4,
         2,
         HardwareMeasurementType.PHYSICAL);
-    host.setMeasurement(Measurement.Uom.CORES, 4.0);
+    host.setMeasurement(MetricIdUtils.getCores().toString(), 4.0);
     host.addToMonthlyTotal(
-        OffsetDateTime.parse("2021-02-26T01:00:00Z"), Measurement.Uom.CORES, 5.0);
-    repo.saveAndFlush(host);
+        OffsetDateTime.parse("2021-02-26T01:00:00Z"), MetricIdUtils.getCores(), 5.0);
+    host = persistHosts(host).get(0);
 
     Optional<Host> result = repo.findById(host.getId());
     assertTrue(result.isPresent());
     Host saved = result.get();
     assertEquals(1, saved.getBuckets().size());
-    assertEquals(4.0, saved.getMeasurement(Measurement.Uom.CORES));
-    assertEquals(5.0, saved.getMonthlyTotal("2021-02", Measurement.Uom.CORES));
+    assertEquals(4.0, saved.getMeasurement(MetricIdUtils.getCores().toString()));
+    assertEquals(5.0, saved.getMonthlyTotal("2021-02", MetricIdUtils.getCores()));
   }
 
   @Transactional
   @Test
   void testUpdate() {
-    Host host = new Host("INV1", "HOST1", "my_acct", "my_org", "sub_id");
+    Host host = new Host("INV1", "HOST1", "my_org", "sub_id");
     host.setDisplayName(DEFAULT_DISPLAY_NAME);
-    host.setSockets(1);
-    host.setCores(1);
-    host.setMeasurement(Measurement.Uom.CORES, 2.0);
+    host.setMeasurement(MetricIdUtils.getSockets().toString(), 1.0);
+    host.setMeasurement(MetricIdUtils.getCores().toString(), 1.0);
+    host.setMeasurement(MetricIdUtils.getCores().toString(), 2.0);
     host.addToMonthlyTotal(
-        OffsetDateTime.parse("2021-02-26T01:00:00Z"), Measurement.Uom.CORES, 3.0);
+        OffsetDateTime.parse("2021-02-26T01:00:00Z"), MetricIdUtils.getCores(), 3.0);
     host.addToMonthlyTotal(
-        OffsetDateTime.parse("2021-01-26T01:00:00Z"), Measurement.Uom.SOCKETS, 10.0);
+        OffsetDateTime.parse("2021-01-26T01:00:00Z"), MetricIdUtils.getSockets(), 10.0);
 
     host.addBucket(
         "RHEL",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         false,
         4,
         2,
@@ -257,20 +303,20 @@ class HostRepositoryTest {
         "Satellite",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         true,
         4,
         2,
         HardwareMeasurementType.PHYSICAL);
-    repo.saveAndFlush(host);
+    host = persistHosts(host).get(0);
 
     Optional<Host> result = repo.findById(host.getId());
     assertTrue(result.isPresent());
     Host toUpdate = result.get();
     assertEquals(2, toUpdate.getBuckets().size());
-
-    toUpdate.setAccountNumber("updated_acct_num");
-    toUpdate.setSockets(4);
-    toUpdate.setCores(8);
+    toUpdate.setMeasurement(MetricIdUtils.getSockets().toString(), 4.0);
+    toUpdate.setMeasurement(MetricIdUtils.getCores().toString(), 8.0);
     toUpdate.setDisplayName(DEFAULT_DISPLAY_NAME);
 
     HostTallyBucket rhelBucket =
@@ -284,23 +330,22 @@ class HostRepositoryTest {
             .findFirst()
             .orElse(null);
     toUpdate.removeBucket(rhelBucket);
-    toUpdate.setMeasurement(Measurement.Uom.CORES, 8.0);
+    toUpdate.setMeasurement(MetricIdUtils.getCores().toString(), 8.0);
     toUpdate.addToMonthlyTotal(
-        OffsetDateTime.parse("2021-02-26T01:00:00Z"), Measurement.Uom.CORES, 4.0);
+        OffsetDateTime.parse("2021-02-26T01:00:00Z"), MetricIdUtils.getCores(), 4.0);
     toUpdate.clearMonthlyTotal(OffsetDateTime.parse("2021-01-02T00:00:00Z"));
-    repo.saveAndFlush(toUpdate);
+    persistHosts(toUpdate);
 
     Optional<Host> updateResult = repo.findById(toUpdate.getId());
     assertTrue(updateResult.isPresent());
     Host updated = updateResult.get();
-    assertEquals("updated_acct_num", updated.getAccountNumber());
-    assertEquals(4, updated.getSockets().intValue());
-    assertEquals(8, updated.getCores().intValue());
+    assertEquals(4, updated.getMeasurement(MetricIdUtils.getSockets().toString()).intValue());
+    assertEquals(8, updated.getMeasurement(MetricIdUtils.getCores().toString()).intValue());
     assertEquals(1, updated.getBuckets().size());
     assertTrue(updated.getBuckets().contains(satelliteBucket));
-    assertEquals(8.0, updated.getMeasurement(Measurement.Uom.CORES));
-    assertEquals(7.0, updated.getMonthlyTotal("2021-02", Measurement.Uom.CORES));
-    assertNull(updated.getMonthlyTotal("2021-02", Measurement.Uom.SOCKETS));
+    assertEquals(8.0, updated.getMeasurement(MetricIdUtils.getCores().toString()));
+    assertEquals(7.0, updated.getMonthlyTotal("2021-02", MetricIdUtils.getCores()));
+    assertNull(updated.getMonthlyTotal("2021-02", MetricIdUtils.getSockets()));
   }
 
   @Transactional
@@ -308,10 +353,12 @@ class HostRepositoryTest {
   void testFindHostsWhenAccountIsDifferent() {
     Page<TallyHostView> hosts =
         repo.getTallyHostViews(
-            "account1",
+            "ORG_account1",
             RHEL,
             ServiceLevel.PREMIUM,
             Usage.PRODUCTION,
+            BillingProvider._ANY,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             0,
             0,
@@ -327,10 +374,12 @@ class HostRepositoryTest {
   void testFindHostsWhenProductIsDifferent() {
     Page<TallyHostView> hosts =
         repo.getTallyHostViews(
-            "account2",
+            "ORG_account2",
             COOL_PROD,
             ServiceLevel.PREMIUM,
             Usage.PRODUCTION,
+            BillingProvider._ANY,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             0,
             0,
@@ -346,10 +395,12 @@ class HostRepositoryTest {
   void testFindHostsWhenSLAIsDifferent() {
     Page<TallyHostView> hosts =
         repo.getTallyHostViews(
-            "account2",
+            "ORG_account2",
             RHEL,
             ServiceLevel.SELF_SUPPORT,
             Usage.PRODUCTION,
+            BillingProvider._ANY,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             0,
             0,
@@ -365,10 +416,12 @@ class HostRepositoryTest {
   void testFindHostsWhenUsageIsDifferent() {
     Page<TallyHostView> hosts =
         repo.getTallyHostViews(
-            "account2",
+            "ORG_account2",
             RHEL,
             ServiceLevel.SELF_SUPPORT,
             Usage.DISASTER_RECOVERY,
+            BillingProvider._ANY,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             0,
             0,
@@ -384,22 +437,24 @@ class HostRepositoryTest {
   void testNoHostFoundWhenItHasNoBucket() {
     Optional<Host> existing = repo.findById(existingHostsByInventoryId.get("inventory6").getId());
     assertTrue(existing.isPresent());
-    assertEquals("account3", existing.get().getAccountNumber());
 
     // When a host has no buckets, it will not be returned.
     Page<TallyHostView> hosts =
-        repo.getTallyHostViews("account4", null, null, null, null, 0, 0, PageRequest.of(0, 10));
+        repo.getTallyHostViews(
+            "ORG_account4", null, null, null, null, null, null, 0, 0, PageRequest.of(0, 10));
     assertEquals(0, hosts.stream().count());
   }
 
   @Transactional
   @Test
-  void testReturnsGuestsOfHypervisor() {
+  void testReturnsGuestsOfHypervisorByInstanceId() {
     String account = "hostGuestTest";
     String uuid = UUID.randomUUID().toString();
+    String instanceId = "hypervisorInstanceIdTest";
 
     Host hypervisor = createHost("hypervisor", account);
     hypervisor.setSubscriptionManagerId(uuid);
+    hypervisor.setInstanceId(instanceId);
     addBucketToHost(hypervisor, "RHEL", ServiceLevel.PREMIUM, Usage.PRODUCTION);
 
     Host guest = createHost("guest", account);
@@ -413,10 +468,11 @@ class HostRepositoryTest {
 
     List<Host> toSave = Arrays.asList(hypervisor, guest, unmappedGuest);
     toSave.forEach(x -> x.setDisplayName(DEFAULT_DISPLAY_NAME));
-    repo.saveAll(toSave);
-    repo.flush();
+    persistHosts(toSave.toArray(new Host[] {}));
 
-    Page<Host> guests = repo.getHostsByHypervisor(account, uuid, PageRequest.of(0, 10));
+    Page<Host> guests =
+        repo.getGuestHostsByHypervisorInstanceId(
+            "ORG_" + account, instanceId, PageRequest.of(0, 10));
     assertEquals(1, guests.getTotalElements());
     assertEquals(uuid, guests.getContent().get(0).getHypervisorUuid());
     assertEquals("guest", guests.getContent().get(0).getInventoryId());
@@ -428,10 +484,12 @@ class HostRepositoryTest {
   void testCanSortByIdForImplicitSort() {
     Page<TallyHostView> hosts =
         repo.getTallyHostViews(
-            "account2",
+            "ORG_account2",
             "RHEL",
             ServiceLevel.PREMIUM,
             Usage.PRODUCTION,
+            BillingProvider._ANY,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             0,
             0,
@@ -444,137 +502,20 @@ class HostRepositoryTest {
 
   @Transactional
   @Test
-  void testCanSortByDisplayName() {
-    Page<TallyHostView> hosts =
-        repo.getTallyHostViews(
-            "account2",
-            "RHEL",
-            ServiceLevel.PREMIUM,
-            Usage.PRODUCTION,
-            SANITIZED_MISSING_DISPLAY_NAME,
-            0,
-            0,
-            PageRequest.of(
-                0,
-                10,
-                Sort.Direction.ASC,
-                HostsResource.HOST_SORT_PARAM_MAPPING.get(HostReportSort.DISPLAY_NAME)));
-    List<TallyHostView> found = hosts.stream().collect(Collectors.toList());
-
-    assertEquals(1, found.size());
-    assertTallyHostView(found.get(0), "inventory3");
-  }
-
-  @Transactional
-  @Test
-  void testCanSortByMeasurementType() {
-    Page<TallyHostView> hosts =
-        repo.getTallyHostViews(
-            "account3",
-            RHEL,
-            ServiceLevel.PREMIUM,
-            Usage.PRODUCTION,
-            SANITIZED_MISSING_DISPLAY_NAME,
-            0,
-            0,
-            PageRequest.of(
-                0,
-                10,
-                Sort.Direction.ASC,
-                HostsResource.HOST_SORT_PARAM_MAPPING.get(HostReportSort.DISPLAY_NAME)));
-    List<TallyHostView> found = hosts.stream().collect(Collectors.toList());
-
-    assertEquals(1, found.size());
-    assertTallyHostView(found.get(0), "inventory7");
-  }
-
-  @Transactional
-  @Test
-  void testCanSortByCores() {
-    Page<TallyHostView> hosts =
-        repo.getTallyHostViews(
-            "account2",
-            "RHEL",
-            ServiceLevel.PREMIUM,
-            Usage.PRODUCTION,
-            SANITIZED_MISSING_DISPLAY_NAME,
-            0,
-            0,
-            PageRequest.of(
-                0,
-                10,
-                Sort.Direction.ASC,
-                HostsResource.HOST_SORT_PARAM_MAPPING.get(HostReportSort.CORES)));
-    List<TallyHostView> found = hosts.stream().collect(Collectors.toList());
-
-    assertEquals(1, found.size());
-    assertTallyHostView(found.get(0), "inventory3");
-  }
-
-  @Transactional
-  @Test
   void testCanSortBySockets() {
     Page<TallyHostView> hosts =
         repo.getTallyHostViews(
-            "account2",
+            "ORG_account2",
             "RHEL",
             ServiceLevel.PREMIUM,
             Usage.PRODUCTION,
+            BillingProvider._ANY,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             0,
             0,
-            PageRequest.of(
-                0,
-                10,
-                Sort.Direction.ASC,
-                HostsResource.HOST_SORT_PARAM_MAPPING.get(HostReportSort.SOCKETS)));
-    List<TallyHostView> found = hosts.stream().collect(Collectors.toList());
-
-    assertEquals(1, found.size());
-    assertTallyHostView(found.get(0), "inventory3");
-  }
-
-  @Transactional
-  @Test
-  void testCanSortByLastSeen() {
-    Page<TallyHostView> hosts =
-        repo.getTallyHostViews(
-            "account2",
-            "RHEL",
-            ServiceLevel.PREMIUM,
-            Usage.PRODUCTION,
-            SANITIZED_MISSING_DISPLAY_NAME,
-            0,
-            0,
-            PageRequest.of(
-                0,
-                10,
-                Sort.Direction.ASC,
-                HostsResource.HOST_SORT_PARAM_MAPPING.get(HostReportSort.LAST_SEEN)));
-    List<TallyHostView> found = hosts.stream().collect(Collectors.toList());
-
-    assertEquals(1, found.size());
-    assertTallyHostView(found.get(0), "inventory3");
-  }
-
-  @Transactional
-  @Test
-  void testCanSortByHardwareType() {
-    Page<TallyHostView> hosts =
-        repo.getTallyHostViews(
-            "account2",
-            "RHEL",
-            ServiceLevel.PREMIUM,
-            Usage.PRODUCTION,
-            SANITIZED_MISSING_DISPLAY_NAME,
-            0,
-            0,
-            PageRequest.of(
-                0,
-                10,
-                Sort.Direction.ASC,
-                HostsResource.HOST_SORT_PARAM_MAPPING.get(HostReportSort.HARDWARE_TYPE)));
-    List<TallyHostView> found = hosts.stream().collect(Collectors.toList());
+            PageRequest.of(0, 10, Sort.Direction.ASC, "sockets"));
+    List<TallyHostView> found = hosts.stream().toList();
 
     assertEquals(1, found.size());
     assertTallyHostView(found.get(0), "inventory3");
@@ -583,15 +524,17 @@ class HostRepositoryTest {
   @Transactional
   @Test
   void testGetHostViews() {
-    Host host1 = new Host("INV1", "HOST1", "my_acct", "my_org", "sub_id");
-    host1.setSockets(1);
-    host1.setCores(1);
+    Host host1 = new Host("INV1", "HOST1", "my_org", "sub_id");
+    host1.setMeasurement(MetricIdUtils.getSockets().toString(), 1.0);
+    host1.setMeasurement(MetricIdUtils.getCores().toString(), 1.0);
     host1.setNumOfGuests(4);
 
     host1.addBucket(
         "RHEL",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         true,
         4,
         2,
@@ -600,6 +543,8 @@ class HostRepositoryTest {
         "RHEL",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         false,
         10,
         5,
@@ -608,6 +553,8 @@ class HostRepositoryTest {
         "Satellite",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         true,
         4,
         2,
@@ -616,19 +563,20 @@ class HostRepositoryTest {
     List<Host> toPersist =
         Arrays.asList(
             host1,
-            new Host("INV2", "HOST2", "my_acct", "my_org", "sub2_id"),
-            new Host("INV3", "HOST3", "my_acct2", "another_org", "sub3_id"));
+            new Host("INV2", "HOST2", "my_org", "sub2_id"),
+            new Host("INV3", "HOST3", "another_org", "sub3_id"));
 
     toPersist.forEach(x -> x.setDisplayName(DEFAULT_DISPLAY_NAME));
-    repo.saveAll(toPersist);
-    repo.flush();
+    persistHosts(toPersist.toArray(new Host[] {}));
 
     Page<TallyHostView> results =
         repo.getTallyHostViews(
-            "my_acct",
+            "my_org",
             "RHEL",
             ServiceLevel.PREMIUM,
             Usage.PRODUCTION,
+            BillingProvider.RED_HAT,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             0,
             0,
@@ -656,70 +604,36 @@ class HostRepositoryTest {
     assertEquals(5, hypervisor.getCores());
   }
 
-  static String[] instanceSortParams() {
-    return HostsResource.INSTANCE_SORT_PARAM_MAPPING.values().toArray(new String[0]);
-  }
-
-  @Transactional
-  @ParameterizedTest
-  @MethodSource("org.candlepin.subscriptions.db.HostRepositoryTest#instanceSortParams")
-  void canSortByInstanceBasedSortMethods(String sort) {
-
-    Pageable page = PageRequest.of(0, 2, Sort.by(sort));
-    Page<Host> results =
-        repo.findAllBy(
-            "account123", "RHEL", ServiceLevel._ANY, Usage._ANY, "", 0, 0, "2021-01", page);
-
-    assertEquals(2, results.getTotalElements());
-
-    if (sort.equals("monthlyTotals")) {
-      List<Host> payload = results.toList();
-      assertEquals(0.0, payload.get(0).getMonthlyTotal("2021-01", Measurement.Uom.CORES));
-      assertEquals(100.0, payload.get(1).getMonthlyTotal("2021-01", Measurement.Uom.CORES));
-    }
-  }
-
-  static String[] tallyViewSortParams() {
-    return HostsResource.HOST_SORT_PARAM_MAPPING.values().toArray(new String[0]);
-  }
-
-  @Transactional
-  @ParameterizedTest
-  @MethodSource("org.candlepin.subscriptions.db.HostRepositoryTest#tallyViewSortParams")
-  void canSortByHostBasedSortMethods(String sort) {
-    Pageable page = PageRequest.of(0, 1, Sort.by(sort));
-    assertNotNull(
-        repo.getTallyHostViews(
-            "account1234", "product", ServiceLevel._ANY, Usage._ANY, "", 1, 0, page));
-  }
-
   @Transactional
   @Test
   void testNullNumGuests() {
-    Host host = new Host("INV1", "HOST1", "my_acct", "my_org", "sub_id");
+    Host host = new Host("INV1", "HOST1", "my_org", "sub_id");
     host.setDisplayName(DEFAULT_DISPLAY_NAME);
-    host.setSockets(1);
-    host.setCores(1);
+    host.setMeasurement(MetricIdUtils.getSockets().toString(), 1.0);
+    host.setMeasurement(MetricIdUtils.getCores().toString(), 1.0);
 
     host.addBucket(
         "RHEL",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider._ANY,
+        "_ANY",
         true,
         4,
         2,
         HardwareMeasurementType.PHYSICAL);
 
     List<Host> toPersist = Collections.singletonList(host);
-    repo.saveAll(toPersist);
-    repo.flush();
+    persistHosts(toPersist.toArray(new Host[] {}));
 
     Page<TallyHostView> results =
         repo.getTallyHostViews(
-            "my_acct",
+            "my_org",
             "RHEL",
             ServiceLevel.PREMIUM,
             Usage.PRODUCTION,
+            BillingProvider._ANY,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             0,
             0,
@@ -742,42 +656,47 @@ class HostRepositoryTest {
   @Transactional
   @Test
   void testShouldFilterSockets() {
-    Host coreHost = new Host("INV1", "HOST1", "my_acct", "my_org", "sub_id");
+    Host coreHost = new Host("INV1", "HOST1", "my_org", "sub_id");
     coreHost.setDisplayName(DEFAULT_DISPLAY_NAME);
-    coreHost.setSockets(0);
-    coreHost.setCores(1);
+    coreHost.setMeasurement(MetricIdUtils.getSockets().toString(), 0.0);
+    coreHost.setMeasurement(MetricIdUtils.getCores().toString(), 1.0);
     coreHost.addBucket(
         "RHEL",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         true,
         0,
         1,
         HardwareMeasurementType.PHYSICAL);
 
-    Host socketHost = new Host("INV2", "HOST2", "my_acct", "my_org", "sub_id");
+    Host socketHost = new Host("INV2", "HOST2", "my_org", "sub_id");
     socketHost.setDisplayName(DEFAULT_DISPLAY_NAME);
-    socketHost.setSockets(1);
-    socketHost.setCores(0);
+    socketHost.setMeasurement(MetricIdUtils.getSockets().toString(), 1.0);
+    socketHost.setMeasurement(MetricIdUtils.getCores().toString(), 0.0);
     socketHost.addBucket(
         "RHEL",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         true,
         1,
         0,
         HardwareMeasurementType.PHYSICAL);
 
     List<Host> toPersist = Arrays.asList(coreHost, socketHost);
-    repo.saveAll(toPersist);
-    repo.flush();
+    persistHosts(toPersist.toArray(new Host[] {}));
 
     Page<TallyHostView> results =
         repo.getTallyHostViews(
-            "my_acct",
+            "my_org",
             "RHEL",
             ServiceLevel.PREMIUM,
             Usage.PRODUCTION,
+            BillingProvider.RED_HAT,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             0,
             1,
@@ -799,42 +718,47 @@ class HostRepositoryTest {
   @Transactional
   @Test
   void testShouldFilterCores() {
-    Host coreHost = new Host("INV1", "HOST1", "my_acct", "my_org", "sub_id");
+    Host coreHost = new Host("INV1", "HOST1", "my_org", "sub_id");
     coreHost.setDisplayName(DEFAULT_DISPLAY_NAME);
-    coreHost.setSockets(0);
-    coreHost.setCores(1);
+    coreHost.setMeasurement(MetricIdUtils.getSockets().toString(), 0.0);
+    coreHost.setMeasurement(MetricIdUtils.getCores().toString(), 1.0);
     coreHost.addBucket(
         "RHEL",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         true,
         0,
         1,
         HardwareMeasurementType.PHYSICAL);
 
-    Host socketHost = new Host("INV2", "HOST2", "my_acct", "my_org", "sub_id");
+    Host socketHost = new Host("INV2", "HOST2", "my_org", "sub_id");
     socketHost.setDisplayName(DEFAULT_DISPLAY_NAME);
-    socketHost.setSockets(1);
-    socketHost.setCores(0);
+    socketHost.setMeasurement(MetricIdUtils.getSockets().toString(), 1.0);
+    socketHost.setMeasurement(MetricIdUtils.getCores().toString(), 0.0);
     socketHost.addBucket(
         "RHEL",
         ServiceLevel.PREMIUM,
         Usage.PRODUCTION,
+        BillingProvider.RED_HAT,
+        "_ANY",
         true,
         1,
         0,
         HardwareMeasurementType.PHYSICAL);
 
     List<Host> toPersist = Arrays.asList(coreHost, socketHost);
-    repo.saveAll(toPersist);
-    repo.flush();
+    persistHosts(toPersist.toArray(new Host[] {}));
 
     Page<TallyHostView> results =
         repo.getTallyHostViews(
-            "my_acct",
+            "my_org",
             "RHEL",
             ServiceLevel.PREMIUM,
             Usage.PRODUCTION,
+            BillingProvider.RED_HAT,
+            "_ANY",
             SANITIZED_MISSING_DISPLAY_NAME,
             1,
             0,
@@ -854,38 +778,141 @@ class HostRepositoryTest {
   }
 
   @Transactional
+  @Test
+  void testFilterByBillingModel() {
+    Host host1 = createHost("i1", "a1");
+    host1.setBillingProvider(BillingProvider.RED_HAT);
+    addBucketToHost(
+        host1,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.PHYSICAL,
+        BillingProvider.RED_HAT);
+    addBucketToHost(
+        host1,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.PHYSICAL,
+        BillingProvider._ANY);
+
+    Host host2 = createHost("i2", "a1");
+    host2.setBillingProvider(BillingProvider.AWS);
+    addBucketToHost(
+        host2,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.PHYSICAL,
+        BillingProvider.AWS);
+    addBucketToHost(
+        host2,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.PHYSICAL,
+        BillingProvider._ANY);
+
+    Host host3 = createHost("i3", "a1");
+    host3.setBillingProvider(BillingProvider.EMPTY);
+    addBucketToHost(
+        host3,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.PHYSICAL,
+        BillingProvider.EMPTY);
+    addBucketToHost(
+        host3,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.PHYSICAL,
+        BillingProvider._ANY);
+
+    persistHosts(host1, host2, host3);
+
+    Pageable page = PageRequest.of(0, 10, Sort.by(SORT_BY_MONTHLY_TOTALS));
+
+    Page<HostApiProjection> results =
+        repo.findAllBy(
+            "ORG_a1",
+            COOL_PROD,
+            ServiceLevel.PREMIUM,
+            Usage.PRODUCTION,
+            "",
+            0,
+            0,
+            null,
+            null,
+            BillingProvider.AWS,
+            "_ANY",
+            null,
+            page);
+    assertEquals(1L, results.getTotalElements());
+    assertEquals(BillingProvider.AWS, results.getContent().get(0).getBillingProvider());
+
+    Page<HostApiProjection> allResults =
+        repo.findAllBy(
+            "ORG_a1",
+            COOL_PROD,
+            ServiceLevel.PREMIUM,
+            Usage.PRODUCTION,
+            "",
+            0,
+            0,
+            null,
+            null,
+            BillingProvider._ANY,
+            "_ANY",
+            null,
+            page);
+    assertEquals(3L, allResults.getTotalElements());
+    Map<String, HostApiProjection> hostToBill =
+        allResults.stream()
+            .collect(Collectors.toMap(HostApiProjection::getInventoryId, Function.identity()));
+    assertTrue(
+        hostToBill.keySet().containsAll(Arrays.asList("i1", "i2", "i3")),
+        "Result did not contain expected hosts!");
+    assertEquals(BillingProvider.RED_HAT, hostToBill.get("i1").getBillingProvider());
+    assertEquals(BillingProvider.AWS, hostToBill.get("i2").getBillingProvider());
+    assertEquals(BillingProvider.EMPTY, hostToBill.get("i3").getBillingProvider());
+  }
+
+  // TODO More tests
+  @Transactional
   @ParameterizedTest
   @CsvSource({"'',3", "banana,1", "rang,1", "an,2", "celery,0"})
   void testDisplayNameFilter(String displayNameSubstring, Integer expectedResults) {
-
-    String inventoryId = "INV";
     String acctNumber = "ACCT";
 
-    Host host0 = createHost(inventoryId, acctNumber);
+    Host host0 = createHost("INV1", acctNumber);
     host0.setDisplayName("oranges");
     addBucketToHost(host0, RHEL, ServiceLevel.PREMIUM, Usage.PRODUCTION);
 
-    Host host1 = createHost(inventoryId, acctNumber);
+    Host host1 = createHost("INV2", acctNumber);
     host1.setDisplayName("kiwi");
     addBucketToHost(host1, RHEL, ServiceLevel.PREMIUM, Usage.PRODUCTION);
 
-    Host host2 = createHost(inventoryId, acctNumber);
+    Host host2 = createHost("INV3", acctNumber);
     host2.setDisplayName("banana");
     addBucketToHost(host2, RHEL, ServiceLevel.PREMIUM, Usage.PRODUCTION);
 
     List<Host> toPersist = Arrays.asList(host0, host1, host2);
-    repo.saveAll(toPersist);
-    repo.flush();
+    persistHosts(toPersist.toArray(new Host[] {}));
 
     int sockets = 4;
     int cores = 2;
 
     Page<TallyHostView> results =
         repo.getTallyHostViews(
-            acctNumber,
+            "ORG_ACCT",
             RHEL,
             ServiceLevel.PREMIUM,
             Usage.PRODUCTION,
+            BillingProvider._ANY,
+            "_ANY",
             displayNameSubstring,
             cores,
             sockets,
@@ -897,16 +924,159 @@ class HostRepositoryTest {
     assertEquals(expected, actual);
   }
 
-  private Host createHost(String inventoryId, String account) {
+  @Transactional
+  @Test
+  void testFilterByHardwareMeasurementTypes() {
+    Host host1 = createHost("i1", "a1");
+    host1.setBillingProvider(BillingProvider.RED_HAT);
+    addBucketToHost(
+        host1,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.PHYSICAL,
+        BillingProvider.RED_HAT);
+
+    Host host2 = createHost("i2", "a1");
+    host2.setBillingProvider(BillingProvider.RED_HAT);
+    addBucketToHost(
+        host2,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.VIRTUAL,
+        BillingProvider.RED_HAT);
+
+    Host host3 = createHost("i3", "a1");
+    addBucketToHost(
+        host3,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.HYPERVISOR,
+        BillingProvider.RED_HAT);
+
+    persistHosts(host1, host2, host3);
+
+    Pageable page = PageRequest.of(0, 10, Sort.by(SORT_BY_MONTHLY_TOTALS));
+
+    Page<HostApiProjection> results =
+        repo.findAllBy(
+            "ORG_a1",
+            COOL_PROD,
+            ServiceLevel.PREMIUM,
+            Usage.PRODUCTION,
+            "",
+            0,
+            0,
+            null,
+            null,
+            BillingProvider.RED_HAT,
+            "_ANY",
+            List.of(HardwareMeasurementType.VIRTUAL),
+            page);
+    assertEquals(1L, results.getTotalElements());
+    assertEquals(HardwareMeasurementType.VIRTUAL, results.getContent().get(0).getMeasurementType());
+
+    Page<HostApiProjection> allResults =
+        repo.findAllBy(
+            "ORG_a1",
+            COOL_PROD,
+            ServiceLevel.PREMIUM,
+            Usage.PRODUCTION,
+            "",
+            0,
+            0,
+            null,
+            null,
+            BillingProvider.RED_HAT,
+            "_ANY",
+            null,
+            page);
+    assertEquals(3L, allResults.getTotalElements());
+    Map<String, HostApiProjection> hostToBill =
+        allResults.stream()
+            .collect(Collectors.toMap(HostApiProjection::getInventoryId, Function.identity()));
+    assertTrue(
+        hostToBill.keySet().containsAll(Arrays.asList("i1", "i2", "i3")),
+        "Result did not contain expected hosts!");
+    assertEquals(HardwareMeasurementType.PHYSICAL, hostToBill.get("i1").getMeasurementType());
+    assertEquals(HardwareMeasurementType.VIRTUAL, hostToBill.get("i2").getMeasurementType());
+    assertEquals(HardwareMeasurementType.HYPERVISOR, hostToBill.get("i3").getMeasurementType());
+  }
+
+  @Transactional
+  @Test
+  void testFilterByCloudHardwareMeasurementTypes() {
+    Host host1 = createHost("i1", "a1");
+    host1.setBillingProvider(BillingProvider.RED_HAT);
+    addBucketToHost(
+        host1,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.AWS,
+        BillingProvider.RED_HAT);
+
+    Host host2 = createHost("i2", "a1");
+    host2.setBillingProvider(BillingProvider.RED_HAT);
+    addBucketToHost(
+        host2,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.AZURE,
+        BillingProvider.RED_HAT);
+
+    Host host3 = createHost("i3", "a1");
+    addBucketToHost(
+        host3,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.GOOGLE,
+        BillingProvider.RED_HAT);
+
+    Host host5 = createHost("i5", "a1");
+    addBucketToHost(
+        host5,
+        COOL_PROD,
+        ServiceLevel.PREMIUM,
+        Usage.PRODUCTION,
+        HardwareMeasurementType.PHYSICAL,
+        BillingProvider.RED_HAT);
+
+    persistHosts(host1, host2, host3, host5);
+
+    Pageable page = PageRequest.of(0, 10, Sort.by(SORT_BY_MONTHLY_TOTALS));
+
+    Page<HostApiProjection> results =
+        repo.findAllBy(
+            "ORG_a1",
+            COOL_PROD,
+            ServiceLevel.PREMIUM,
+            Usage.PRODUCTION,
+            "",
+            0,
+            0,
+            null,
+            null,
+            BillingProvider.RED_HAT,
+            "_ANY",
+            HardwareMeasurementType.getCloudProviderTypes(),
+            page);
+    assertEquals(3L, results.getTotalElements());
+    Map<String, HostApiProjection> hostToBill =
+        results.stream()
+            .collect(Collectors.toMap(HostApiProjection::getInventoryId, Function.identity()));
+    assertTrue(hostToBill.keySet().containsAll(Arrays.asList("i1", "i2", "i3")));
+  }
+
+  private Host createHost(String inventoryId, String org) {
     Host host =
-        new Host(
-            inventoryId,
-            "INSIGHTS_" + inventoryId,
-            account,
-            "ORG_" + account,
-            "SUBMAN_" + inventoryId);
-    host.setSockets(1);
-    host.setCores(1);
+        new Host(inventoryId, "INSIGHTS_" + inventoryId, "ORG_" + org, "SUBMAN_" + inventoryId);
+    host.setMeasurement(MetricIdUtils.getSockets().toString(), 1.0);
+    host.setMeasurement(MetricIdUtils.getCores().toString(), 1.0);
     return host;
   }
 
@@ -921,7 +1091,30 @@ class HostRepositoryTest {
       ServiceLevel sla,
       Usage usage,
       HardwareMeasurementType measurementType) {
-    return host.addBucket(productId, sla, usage, true, 4, 2, measurementType);
+    return addBucketToHost(
+        host, productId, sla, usage, measurementType, BillingProvider._ANY, "_ANY");
+  }
+
+  private HostTallyBucket addBucketToHost(
+      Host host,
+      String productId,
+      ServiceLevel sla,
+      Usage usage,
+      HardwareMeasurementType measurementType,
+      BillingProvider billingProvider) {
+    return addBucketToHost(host, productId, sla, usage, measurementType, billingProvider, "_ANY");
+  }
+
+  private HostTallyBucket addBucketToHost(
+      Host host,
+      String productId,
+      ServiceLevel sla,
+      Usage usage,
+      HardwareMeasurementType measurementType,
+      BillingProvider billingProvider,
+      String billingAccountId) {
+    return host.addBucket(
+        productId, sla, usage, billingProvider, billingAccountId, true, 4, 2, measurementType);
   }
 
   private void assertTallyHostView(TallyHostView host, String inventoryId) {
